set API variables

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
         {% if title %}
         <title> {{ title }}</title>
         {% else %}
-        <title> Football </title>
+        <title> Freight Data </title>
         {% endif %}
     </head>
     <body>
